# dist_classicrl

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  det_false.txt  det_false_mask.txt  det_true.txt  det_true_mask.txt  learn.txt  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
.github/actions/verify-version/: action.yml
.github/workflows/: ci.yml  close_master_pr.yml  configure-repo.yml  configure_repo.yml  dev_ci.yml  main_ci.yml  master_ci.yml  sync_main_to_dev.yml
benchmark_results/: distributed_128_agents_2_processes.json  distributed_128_agents_3_processes.json  distributed_128_agents_5_processes.json  distributed_128_agents_8_processes.json  distributed_16_agents_2_processes.json  distributed_16_agents_3_processes.json  distributed_16_agents_5_processes.json  distributed_16_agents_8_processes.json  distributed_1_agents_2_processes.json  distributed_1_agents_3_processes.json  distributed_1_agents_5_processes.json  distributed_1_agents_8_processes.json  distributed_2_agents_2_processes.json  distributed_2_agents_3_processes.json  distributed_2_agents_5_processes.json  distributed_2_agents_8_processes.json  distributed_32_agents_2_processes.json  distributed_32_agents_3_processes.json  distributed_32_agents_5_processes.json  distributed_32_agents_8_processes.json  distributed_4_agents_2_processes.json  distributed_4_agents_3_processes.json  distributed_4_agents_5_processes.json  distributed_4_agents_8_processes.json  distributed_64_agents_2_processes.json  distributed_64_agents_3_processes.json  distributed_64_agents_5_processes.json  distributed_64_agents_8_processes.json  distributed_8_agents_2_processes.json  distributed_8_agents_3_processes.json  distributed_8_agents_5_processes.json  distributed_8_agents_8_processes.json  parallel_128_agents_16_processes.json  parallel_128_agents_1_processes.json  parallel_128_agents_2_processes.json  parallel_128_agents_4_processes.json  parallel_128_agents_8_processes.json  parallel_16_agents_16_processes.json  parallel_16_agents_1_processes.json  parallel_16_agents_2_processes.json  (+40 more)
dev_tests/: q_learning_qvalues_plot.py  run_mpi_qvalues.sh  test.py  test3.py  test4.py  test5.py
dev_tests/performance/: q_learning_async_dist_perftest.py  q_learning_parallel_perftest.py  q_learning_single_thread_perftest.py
docs/: benchmarks.rst  conf.py  index.rst  installation.rst  tutorials.rst
docs/development/: architecture.rst  testing.rst
docs/user_guide/: algorithms.rst  distributed.rst  environments.rst  performance.rst
src/dist_classicrl/: __init__.py  _version.py  custom_env.py  parallel_wrapper.py  q_learning.py  q_learning_async_dist.py  q_learning_list.py  q_learning_numpy.py  q_learning_parallel.py  q_learning_petting_zoo.py  requirements.txt  skeleton.py  tiktaktoe_mod.py  utils.py
src/dist_classicrl/algorithms/: __init__.py
src/dist_classicrl/algorithms/base_algorithms/: __init__.py  q_learning_list.py  q_learning_numpy.py  q_learning_optimal.py
src/dist_classicrl/algorithms/base_algorithms/old/: __init__.py  q_learning_optimal_petting_zoo.py  q_learning_petting_zoo.py
src/dist_classicrl/algorithms/buffers/: __init__.py  experience_replay.py
src/dist_classicrl/algorithms/runtime/: __init__.py  base_runtime.py  parallel_runtime.py  q_learning_async_dist.py  q_learning_parallel.py  q_learning_single_thread.py
src/dist_classicrl/benchmarks/: analyze_throughput_benchmarks.py  precommit_throughput_benchmarks.sh  run_comprehensive_throughput_benchmarks.sh
src/dist_classicrl/environments/: __init__.py  custom_env.py  rigged_two_armed_bandit.py  tiktaktoe_mod.py
src/dist_classicrl/old/: __init__.py
src/dist_classicrl/schedules/: exponential_schedule.py
src/dist_classicrl/wrappers/: __init__.py  dummy_vec_wrapper.py  flatten_multidiscrete_wrapper.py  parallel_wrapper.py
tests/: conftest.py  run_tests.sh
tests/dist_classicrl/: perf_test.py
tests/dist_classicrl/algorithms/base_algorithms/: test_q_learning_optimal.py
tests/dist_classicrl/algorithms/runtime/: run_mpi_test.sh  run_runtime_tests.sh  test_q_learning_async_dist.py  test_q_learning_distributed.py  test_q_learning_parallel.py  test_q_learning_runtimes.py  test_q_learning_single_thread.py  test_single_thread_runtime_eval.py
tests/dist_classicrl/environment/: test_tiktaktoe_mod.py
tests/dist_tests/: run_runtime_tests.sh  test_q_learning_distributed.py
tests/utils/: mock_env.py
