[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=61", "setuptools_scm[toml]>=7", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dist_classicrl"
description = "A Python package for distributed classical reinforcement learning algorithms."
version = "0.0.0"
authors = [{ name = "Javier Moralejo Piñas", email = "j.moralejo.pinas@gmail.com" }]
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "mpi4py",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/j-moralejo-pinas/dist_classicrl"
Source = "https://github.com/j-moralejo-pinas/dist_classicrl"
Tracker = "https://github.com/j-moralejo-pinas/dist_classicrl/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[project.optional-dependencies]
dev = ["pytest", "pyright", "pre-commit", "ruff"] # , "isort", "black"
docs = ["sphinx", "sphinx-autoapi", "sphinx_rtd_theme", "sphinxcontrib-napoleon"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "-ra --strict-markers"
# norecursedirs = ["build", "dist"]
testpaths = ["tests/dist_classicrl"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint."Main"]
source-roots = ["src"]

[tool.pylint."Format"]
max-line-length = 100

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
ignore = [
    "S101", # Use of `assert` for testing purposes
    "COM812", # Add commas at the end of an iterable
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TD003", # Missing issue link for this TODO
    "FIX001", # Line contains FIXME, consider resolving the issue
    "FIX002", # Line contains TODO, consider resolving the issue
    "PLR0913",  # Too many arguments in function definition
    "PLR0915", # Too many statements
]
select = ["ALL"]
exclude = ["src/dist_classicrl/old/*", "src/dist_classicrl/wrappers/parallel_wrapper.py", "tests/*"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001", # Private member accessed
    "PLR2004", # Magic value used in comparison
    "INP001", # File is part of an implicit namespace package.
]

[tool.pydoclint]
style = 'google'
